--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
     "dev": "nodemon src/index.ts",
     "build": "tsc",
     "start": "node dist/src/index.js",
-    "db:migrate": "sequelize-cli db:migrate",
-    "db:migrate:undo": "sequelize-cli db:migrate:undo",
-    "db:migrate:undo:all": "sequelize-cli db:migrate:undo:all",
-    "db:seed": "sequelize-cli db:seed:all",
-    "db:seed:undo": "sequelize-cli db:seed:undo:all",
+    "db:migrate": "sequelize-cli db:migrate --config src/config/config.js --migrations-path src/database/migrations",
+    "db:migrate:undo": "sequelize-cli db:migrate:undo --config src/config/config.js --migrations-path src/database/migrations",
+    "db:migrate:undo:all": "sequelize-cli db:migrate:undo:all --config src/config/config.js --migrations-path src/database/migrations",
+    "db:seed": "sequelize-cli db:seed:all --config src/config/config.js --seeders-path src/database/seeders",
+    "db:seed:undo": "sequelize-cli db:seed:undo:all --config src/config/config.js --seeders-path src/database/seeders",
     "migration:create": "sequelize-cli migration:generate --name",
-    "migration:run": "npx sequelize-cli db:migrate",
+    "migration:run": "npx sequelize-cli db:migrate --config src/config/config.js --migrations-path src/database/migrations",
     "seed:create": "sequelize-cli seed:generate --name",
     "lint": "eslint . --ext .ts",
     "lint-fix": "eslint . --ext .ts --fix",
@@ -60,6 +60,8 @@
     "nodemon": "^3.1.10",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.37.7",
+    "uuid": "^11.1.0",
+    "uuidv4": "^6.2.13"
   }
 }
