added routes and controller
add user register

rebased Authentication

product model

product with migration

updated products stuff

added reject and resolve

authentication

Rename Product.ts to Products.ts

added reject and resolve

    pick 584d187 added reject and resolve

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -110,6 +110,6 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "src/database/seeders/20250808142734-productCategories.js", "src/database/seeders/20250808143131-productSubCategory.js", "src/database/seeders/20250808143118-products.js", "src/database/seeders/20250808080448-Roles.js"],
   "exclude": ["node_modules", "dist", "eslint.config.mts"]
 }
