--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "ecommerce-practice",
   "version": "1.0.0",
-  "description": "",
   "keywords": [
     "ecommerce"
   ],
@@ -62,6 +61,7 @@
     "typescript-eslint": "^8.39.0"
   },
   "dependencies": {
+    "cloudinary": "^2.7.0",
     "@types/bcrypt": "^6.0.0",
     "@types/csurf": "^1.11.5",
     "@types/jsonwebtoken": "^9.0.10",
@@ -74,6 +74,7 @@
     "joi": "^18.0.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
+    "multer": "^2.0.2",
     "nodemon": "^3.1.10",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
