--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "ecommerce-practice",
   "version": "1.0.0",
-  "description": "",
   "keywords": [
     "ecommerce"
   ],
@@ -63,5 +62,6 @@
     "sequelize": "^6.37.7",
     "uuid": "^11.1.0",
     "uuidv4": "^6.2.13"
-  }
+  },
+  "description": ""
 }
