--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "@types/sequelize": "^4.28.20",
     "@typescript-eslint/eslint-plugin": "^8.39.0",
     "@typescript-eslint/parser": "^8.39.0",
+    "@types/multer": "^2.0.0",
+    "@types/redis": "^4.0.10",
     "dotenv": "^17.2.1",
     "eslint": "^9.32.0",
     "globals": "^16.3.0",
@@ -55,8 +57,11 @@
   "dependencies": {
     "express": "^5.1.0",
     "express-http-proxy": "^2.1.1",
+    "cloudinary": "^2.7.0",
     "joi": "^18.0.0",
     "morgan": "^1.10.1",
+    "multer": "^2.0.2",
+    "redis": "^4.7.1",
     "nodemon": "^3.1.10",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
