cloudinary  and images upload

--- a/package.json
+++ b/package.json
@@ -48,7 +48,6 @@
     "@types/sequelize": "^4.28.20",
     "@typescript-eslint/eslint-plugin": "^8.39.0",
     "@typescript-eslint/parser": "^8.39.0",
-    "babel-register": "^6.26.0",
     "dotenv": "^17.2.1",
     "eslint": "^9.32.0",
     "globals": "^16.3.0",
@@ -67,11 +66,11 @@
     "csurf": "^1.11.0",
     "express": "^5.1.0",
     "express-http-proxy": "^2.1.1",
-    "express-rate-limit": "^8.0.1",
-    "express-validator": "^7.2.1",
     "joi": "^18.0.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
+    "multer": "^2.0.2",
+    "redis": "^4.7.1",
     "nodemon": "^3.1.10",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
