--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/express": "^5.0.3",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.2.0",
+    "@types/redis": "^4.0.10",
     "@types/sequelize": "^4.28.20",
     "@typescript-eslint/eslint-plugin": "^8.39.0",
     "@typescript-eslint/parser": "^8.39.0",
@@ -53,15 +54,25 @@
     "typescript-eslint": "^8.39.0"
   },
   "dependencies": {
+    "@types/bcrypt": "^6.0.0",
+    "@types/csurf": "^1.11.5",
+    "@types/jsonwebtoken": "^9.0.10",
+    "bcrypt": "^6.0.0",
+    "csurf": "^1.11.0",
     "express": "^5.1.0",
     "express-http-proxy": "^2.1.1",
+    "express-rate-limit": "^8.0.1",
+    "express-validator": "^7.2.1",
     "joi": "^18.0.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
     "nodemon": "^3.1.10",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
+    "redis": "^4.7.1",
     "sequelize": "^6.37.7",
     "uuid": "^11.1.0",
-    "uuidv4": "^6.2.13"
+    "uuidv4": "^6.2.13",
+    "xss-clean": "^0.1.4"
   }
 }
