--- a/package.json
+++ b/package.json
@@ -52,10 +52,12 @@
     "typescript-eslint": "^8.39.0"
   },
   "dependencies": {
+    "cloudinary": "^2.7.0",
     "express": "^5.1.0",
     "express-http-proxy": "^2.1.1",
     "joi": "^18.0.0",
     "morgan": "^1.10.1",
+    "multer": "^2.0.2",
     "nodemon": "^3.1.10",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
