--- a/package.json
+++ b/package.json
@@ -21,18 +21,23 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.ts",
     "build": "tsc",
-    "start": "node dist/src/index.js",
-    "db:migrate": "sequelize-cli db:migrate --config src/config/config.js --migrations-path src/database/migrations",
-    "db:migrate:undo": "sequelize-cli db:migrate:undo --config src/config/config.js --migrations-path src/database/migrations",
-    "db:migrate:undo:all": "sequelize-cli db:migrate:undo:all --config src/config/config.js --migrations-path src/database/migrations",
-    "db:seed": "sequelize-cli db:seed:all --config src/config/config.js --seeders-path src/database/seeders",
-    "db:seed:undo": "sequelize-cli db:seed:undo:all --config src/config/config.js --seeders-path src/database/seeders",
+    "start": "node dist/index.js",
+    "db:migrate": "sequelize-cli db:migrate",
+    "db:migrate:undo": "sequelize-cli db:migrate:undo",
+    "db:migrate:undo:all": "sequelize-cli db:migrate:undo:all",
+    "db:seed": "sequelize-cli db:seed:all",
+    "db:seed:undo": "sequelize-cli db:seed:undo:all",
     "migration:create": "sequelize-cli migration:generate --name",
-    "migration:run": "npx sequelize-cli db:migrate --config src/config/config.js --migrations-path src/database/migrations",
+    "migration:run": "npx sequelize-cli db:migrate",
     "seed:create": "sequelize-cli seed:generate --name",
     "lint": "eslint . --ext .ts",
     "lint-fix": "eslint . --ext .ts --fix",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "docker:build": "docker-compose build",
+    "docker:up": "docker-compose up -d",
+    "docker:stop": "docker-compose stop",
+    "docker:down": "docker-compose down",
+    "docker:logs": "docker-compose logs -f"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
@@ -43,6 +48,7 @@
     "@types/sequelize": "^4.28.20",
     "@typescript-eslint/eslint-plugin": "^8.39.0",
     "@typescript-eslint/parser": "^8.39.0",
+    "babel-register": "^6.26.0",
     "dotenv": "^17.2.1",
     "eslint": "^9.32.0",
     "globals": "^16.3.0",
