including the format of pull requests and windston setup

--- a/package.json
+++ b/package.json
@@ -79,6 +79,8 @@
     "sequelize": "^6.37.7",
     "uuid": "^11.1.0",
     "uuidv4": "^6.2.13",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0",
     "xss-clean": "^0.1.4"
   }
 }
