--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,18 +11,18 @@ services:
       POSTGRES_USER: ${DEV_USERNAME}
       POSTGRES_PASSWORD: ${DEV_PASSWORD}
     ports:
-      - "5432:5432"
+      - '5432:5432'
     volumes:
       - postgres_data:/var/lib/postgresql/data
     networks:
       - ecommerce-network
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${DEV_USERNAME} -d ${DEV_DATABASE}"]
+      test: ['CMD-SHELL', 'pg_isready -U ${DEV_USERNAME} -d ${DEV_DATABASE}']
       interval: 10s
       timeout: 5s
       retries: 5
 
-  # Main Ecommerce Application 
+  # Main Ecommerce Application
   app:
     build:
       context: .
@@ -46,7 +46,7 @@ services:
       # JWT Secret
       JWT_SECRET: ${JWT_SECRET}
     ports:
-      - "5000:5000"
+      - '5000:5000'
     depends_on:
       postgres:
         condition: service_healthy
