--- a/package.json
+++ b/package.json
@@ -40,18 +40,23 @@
     "docker:logs": "docker-compose logs -f"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.28.0",
+    "@babel/register": "^7.27.1",
     "@eslint/js": "^9.32.0",
     "@types/express": "^5.0.3",
     "@types/morgan": "^1.9.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.2.0",
     "@types/redis": "^4.0.10",
     "@types/sequelize": "^4.28.20",
     "@typescript-eslint/eslint-plugin": "^8.39.0",
     "@typescript-eslint/parser": "^8.39.0",
+    "babel-register": "^6.26.0",
     "dotenv": "^17.2.1",
     "eslint": "^9.32.0",
     "globals": "^16.3.0",
     "jiti": "^2.5.1",
+    "multer": "^2.0.2",
     "prettier": "3.6.2",
     "sequelize-cli": "^6.6.3",
     "ts-node": "^10.9.2",
@@ -63,14 +68,14 @@
     "@types/csurf": "^1.11.5",
     "@types/jsonwebtoken": "^9.0.10",
     "bcrypt": "^6.0.0",
+    "cloudinary": "^2.7.0",
     "csurf": "^1.11.0",
     "express": "^5.1.0",
     "express-http-proxy": "^2.1.1",
+    "express-rate-limit": "8.0.1",
     "joi": "^18.0.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
-    "multer": "^2.0.2",
-    "redis": "^4.7.1",
     "nodemon": "^3.1.10",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
