--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@types/bcrypt": "^6.0.0",
     "@types/csurf": "^1.11.5",
     "@types/jsonwebtoken": "^9.0.10",
+    "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "csurf": "^1.11.0",
     "express": "^5.1.0",
