--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "@types/node": "^24.2.0",
     "@types/redis": "^4.0.10",
     "@types/sequelize": "^4.28.20",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "@typescript-eslint/eslint-plugin": "^8.39.0",
     "@typescript-eslint/parser": "^8.39.0",
     "babel-register": "^6.26.0",
@@ -77,6 +79,8 @@
     "pg-hstore": "^2.3.4",
     "redis": "^4.7.1",
     "sequelize": "^6.37.7",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "uuid": "^11.1.0",
     "uuidv4": "^6.2.13",
     "winston": "^3.17.0",
