--- a/.env.example
+++ b/.env.example
@@ -8,9 +8,9 @@ DEV_PASSWORD=postgres
 DEV_HOST=localhost
 DEV_PORT=5432
 # Redis Configuration
-REDIS_HOST=redis-13935.c83.us-east-1-2.ec2.redns.redis-cloud.com
-REDIS_PORT=13935
-REDIS_PASSWORD=kR6SRYY2PlmHSRMyKT8d4HH7O
+REDIS_HOST=redis-host.example.com
+REDIS_PORT=your-redis-port
+REDIS_PASSWORD=you-password-here
 REDIS_DB=0
 # JWT Configuration
 JWT_SECRET=your-super-secret-jwt-key-change-in-production
