--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@types/bcrypt": "^6.0.0",
     "@types/csurf": "^1.11.5",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/nodemailer": "^7.0.0",
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.7.0",
     "csurf": "^1.11.0",
@@ -77,6 +78,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.5",
     "node-cron": "^4.2.1",
     "nodemon": "^3.1.10",
     "pg": "^8.16.3",
