--- a/package.json
+++ b/package.json
@@ -85,6 +85,8 @@
     "pg-hstore": "^2.3.4",
     "redis": "^4.7.1",
     "sequelize": "^6.37.7",
+    "socket": "^1.0.92",
+    "socket.io": "^4.8.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^11.1.0",
