--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/morgan": "^1.9.10",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.2.0",
+    "@types/node-cron": "^3.0.11",
     "@types/redis": "^4.0.10",
     "@types/sequelize": "^4.28.20",
     "@types/swagger-jsdoc": "^6.0.4",
